--- a/build.gradle
+++ b/build.gradle
@@ -18,30 +18,35 @@ buildscript {
 
 apply plugin: "net.minecraftforge.gradle.forge"
 
-sourceCompatibility = targetCompatibility = 1.8
-compileJava.options.encoding = "UTF-8"
 version = modVersion
 group = modGroup
 archivesBaseName = modBaseName
+
+sourceCompatibility = targetCompatibility = 1.8
+compileJava.options.encoding = "UTF-8"
 
 minecraft {
     version = "1.8.9-11.15.1.2318-1.8.9"
     runDir = "run"
     mappings = "stable_22"
+    makeObfSourceJar = false
+    replace("@VERSION@": modVersion)
 }
-
-dependencies {}
 
 processResources {
     inputs.property "version", project.version
     inputs.property "mcversion", project.minecraft.version
-
     from(sourceSets.main.resources.srcDirs) {
         include "mcmod.info"
         expand "version": project.version, "mcversion": project.minecraft.version
     }
-
     from(sourceSets.main.resources.srcDirs) {
         exclude "mcmod.info"
+    }
+}
+
+sourceSets {
+    main {
+        output.resourcesDir = java.outputDir
     }
 }
