--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath "com.github.ReplayMod:ForgeGradle:ceb83c0:all"
+        classpath "com.github.ReplayMod:ForgeGradle:34ab703:all"
     }
 }
 
@@ -26,9 +26,9 @@ sourceCompatibility = targetCompatibility = 1.8
 compileJava.options.encoding = "UTF-8"
 
 minecraft {
-    version = "1.8.9-11.15.1.2318-1.8.9"
+    version = "1.12.2-14.23.0.2486"
     runDir = "run"
-    mappings = "stable_22"
+    mappings = "snapshot_20170615"
     makeObfSourceJar = false
     replace("@VERSION@": modVersion)
 }
